# stonefish_simulator

./: control.py
src/gbr_control/: package.xml  setup.cfg  setup.py
src/gbr_control/gbr_control/: dynsys_program.py  dynsys_program2.py  gbr_direct_interface_python_example.py  gbr_keyboard_demo.py  motor_pwm_node.py  motor_pwm_subscriber.py
src/gbr_control/launch/: control_launch.py
src/stonefish_sim/drones/: gbr.scn  skandi_iceman.scn
src/stonefish_sim/launch/: simulation.launch.py
src/stonefish_sim/metadata/: materials.scn
src/stonefish_sim/scenarios/: vard.scn
src/stonefish_sim/scripts/: gbr_keyboard_demo.sh
